--- a/swiftmk/src/main/res/values/colors.xml
+++ b/swiftmk/src/main/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="transparent">#00000000</color>
     <color name="white">#ffffff</color>
+    <color name="black">#000000</color>
+    <color name="blue">#0E1AA3</color>
 </resources>
