--- a/swiftmk/src/main/res/values/styles.xml
+++ b/swiftmk/src/main/res/values/styles.xml
@@ -5,4 +5,12 @@
         <item name="android:windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
+
+    <style name="CustomDialog" parent="android:style/Theme.Dialog">
+        <item name="android:background">@color/transparent</item>
+        <item name="android:windowBackground">@color/transparent</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowIsFloating">true</item>
+    </style>
+
 </resources>
