--- a/swiftmk/src/main/res/layout/dialog_loading.xml
+++ b/swiftmk/src/main/res/layout/dialog_loading.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical">
 
     <ProgressBar
-        style="@style/NoActionBar"
+        style="@style/ProgressBar.Loading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
