--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="item"
-            type="com.mozhimen.app.Astro" />
+            type="com.mozhimen.app.demo.Astro" />
     </data>
 
     <FrameLayout
