--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,10 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="lightBlue">#1A0E1AA3</color>
+
+    <color name="blue_light">#E8F3FF</color>
+    <color name="blue_normal">#287FF1</color>
+    <color name="blue_dark">#0876E4</color>
+    <color name="blue_theme">#4785EF</color>
+
 </resources>
