--- a/app/src/main/res/layout/activity_componentmk.xml
+++ b/app/src/main/res/layout/activity_componentmk.xml
@@ -17,5 +17,11 @@
             android:text="BaseMKDemo"
             tools:ignore="HardcodedText,UsingOnClickInXml" />
 
+        <com.google.android.material.button.MaterialButton
+            style="@style/Btn"
+            android:onClick="goNavigationMKActivity"
+            android:text="NavigationMK"
+            tools:ignore="HardcodedText,UsingOnClickInXml" />
+
     </LinearLayout>
 </androidx.core.widget.NestedScrollView>
