--- a/app/src/main/res/layout/activity_qrcodemk.xml
+++ b/app/src/main/res/layout/activity_qrcodemk.xml
@@ -5,7 +5,7 @@
 
     <data />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".qrcodemk.QrCodeMKActivity">
@@ -13,11 +13,8 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_gravity="center"
+            android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/qrcodemk_img"
@@ -40,5 +37,5 @@
                 android:text="转化"
                 tools:ignore="HardcodedText" />
         </LinearLayout>
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </FrameLayout>
 </layout>
