--- a/uicoremk/src/main/res/values/values.xml
+++ b/uicoremk/src/main/res/values/values.xml
@@ -1,6 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <style name="BtnMKSpinnerFormStyle">
-        <item name="colorControlNormal">@android:color/transparent</item> <!--改变了spinner的箭头颜色  -->
+        <item name="android:colorControlNormal">@android:color/transparent</item> <!--改变了spinner的箭头颜色  -->
+    </style>
+
+    <style name="NavMKBarStyle">
+        <item name="nav_icon_size">20sp</item>
+        <item name="nav_icon_color">@color/color_000</item>
+        <item name="hor_padding">8dp</item>
+
+        <item name="nav_line_color">@color/color_white</item>
+        <item name="nav_line_height">2px</item>
+
+        <!--       iconfont 字体资源-->
+        <item name="nav_icon">&#xe615;</item>
+        <item name="text_btn_text_size">16sp</item>
+        <item name="text_btn_text_color">@color/color_333</item>
+        <item name="title_text_size">18sp</item>
+        <item name="title_text_color">@color/color_000</item>
+        <item name="subTitle_text_size">@dimen/font_14</item>
+        <item name="title_text_size_with_subTitle">16sp</item>
+        <item name="subTitle_text_color">@color/color_000</item>
     </style>
 </resources>
