--- a/uicoremk/src/main/res/values/attrs.xml
+++ b/uicoremk/src/main/res/values/attrs.xml
@@ -1,36 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!--searchmk-->
-    <declare-styleable name="SearchMKViewStyle" format="reference" />
+    <attr name="SearchMKLayout_SearchMKLayoutStyle" format="reference" />
+    <declare-styleable name="SearchMKLayout">
+        <attr name="searchMKLayout_search_icon" format="string|reference" />
+        <attr name="searchMKLayout_search_iconSize" format="dimension" />
+        <attr name="searchMKLayout_search_iconPadding" format="dimension" />
+        <attr name="searchMKLayout_search_background" format="reference" />
+        <attr name="searchMKLayout_search_textSize" format="dimension" />
+        <attr name="searchMKLayout_search_textColor" format="color" />
 
-    <declare-styleable name="SearchMKView">
-        <attr name="searchMKView_search_icon" format="string|reference" />
-        <attr name="searchMKView_search_iconSize" format="dimension" />
-        <attr name="searchMKView_search_iconPadding" format="dimension" />
-        <attr name="searchMKView_search_background" format="reference" />
-        <attr name="searchMKView_search_textSize" format="dimension" />
-        <attr name="searchMKView_search_textColor" format="color" />
+        <attr name="searchMKLayout_clear_icon" format="string" />
+        <attr name="searchMKLayout_clear_iconSize" format="dimension" />
 
-        <attr name="searchMKView_clear_icon" format="string" />
-        <attr name="searchMKView_clear_iconSize" format="dimension" />
-
-        <attr name="searchMKView_hint_text" format="string" />
-        <attr name="searchMKView_hint_textSize" format="dimension" />
-        <attr name="searchMKView_hint_textColor" format="color" />
-        <attr name="searchMKView_hint_gravity" format="enum">
-            <enum name="hint_center" value="0" />
-            <enum name="hint_left" value="1" />
+        <attr name="searchMKLayout_hint_text" format="string" />
+        <attr name="searchMKLayout_hint_textSize" format="dimension" />
+        <attr name="searchMKLayout_hint_textColor" format="color" />
+        <attr name="searchMKLayout_hint_gravity" format="enum">
+            <enum name="center" value="0" />
+            <enum name="left" value="1" />
         </attr>
 
-        <attr name="searchMKView_keyword_icon" format="string" />
-        <attr name="searchMKView_keyword_iconSize" format="dimension" />
-        <attr name="searchMKView_keyword_iconColor" format="color" />
-        <attr name="searchMKView_keyword_background" format="reference" />
-        <attr name="searchMKView_keyword_maxLength" format="integer" />
-        <attr name="searchMKView_keyword_padding" format="dimension" />
+        <attr name="searchMKLayout_keyword_icon" format="string" />
+        <attr name="searchMKLayout_keyword_iconSize" format="dimension" />
+        <attr name="searchMKLayout_keyword_iconColor" format="color" />
+        <attr name="searchMKLayout_keyword_background" format="reference" />
+        <attr name="searchMKLayout_keyword_maxLength" format="integer" />
+        <attr name="searchMKLayout_keyword_padding" format="dimension" />
     </declare-styleable>
 
     <!--navmk-->
+    <attr name="NavMKBar_NavMKBarStyle" format="reference" />
     <declare-styleable name="NavMKBar">
         <attr name="navMKBar_title" format="string" />
         <attr name="navMKBar_title_textColor" format="color" />
@@ -53,7 +53,6 @@
 
         <attr name="navMKBar_paddingHorizontal" format="dimension" />
     </declare-styleable>
-    <attr name="NavMKStyle" format="reference" />
 
     <!--bannermk-->
     <declare-styleable name="BannerMK">
