--- a/uicoremk/src/main/res/values/ids.xml
+++ b/uicoremk/src/main/res/values/ids.xml
@@ -2,4 +2,11 @@
 <resources>
     <!--navmk-->
     <item name="navmk_icon_left_back" type="id" />
+    <!--searchmk-->
+    <item name="searchmk_edit_search" type="id" />
+    <item name="searchmk_txt_icon_clear" type="id" />
+    <item name="searchmk_txt_hint" type="id" />
+    <item name="searchmk_txt_icon_search" type="id" />
+    <item name="searchmk_txt_icon_keyword" type="id" />
+    <item name="searchmk_txt_keyword" type="id" />
 </resources>
