--- a/underlayk/src/main/res/layout/debugk_dialog_item.xml
+++ b/underlayk/src/main/res/layout/debugk_dialog_item.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="itemDebugKDialog"
             type="com.mozhimen.underlayk.debugk.mos.DebugKMethodMo" />
@@ -19,6 +20,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:text="@{itemDebugKDialog.title}"
             android:textColor="@android:color/black"
             android:textSize="15sp" />
 
