--- a/app/src/main/res/layout/activity_scank.xml
+++ b/app/src/main/res/layout/activity_scank.xml
@@ -47,5 +47,12 @@
             style="@style/BtnStyle"
             android:text="扫描二维码(回调图片)"
             tools:ignore="HardcodedText" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/scank_demo_btn_scan_contrast"
+            style="@style/BtnStyle"
+            android:text="图片相似度"
+            android:onClick="goScanKContrast"
+            tools:ignore="HardcodedText,UsingOnClickInXml" />
     </LinearLayout>
 </layout>
