--- a/app/src/main/res/layout/activity_abilityk.xml
+++ b/app/src/main/res/layout/activity_abilityk.xml
@@ -37,6 +37,12 @@
                 android:onClick="goNetK"
                 android:text="NetK"
                 tools:ignore="HardcodedText,UsingOnClickInXml" />
+
+            <com.google.android.material.button.MaterialButton
+                style="@style/BtnStyle"
+                android:onClick="goTransK"
+                android:text="TransK"
+                tools:ignore="HardcodedText,UsingOnClickInXml" />
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 </layout>
