--- a/app/src/main/res/layout/activity_abilityk.xml
+++ b/app/src/main/res/layout/activity_abilityk.xml
@@ -43,6 +43,13 @@
                 android:onClick="goTransK"
                 android:text="TransK"
                 tools:ignore="HardcodedText,UsingOnClickInXml" />
+
+            <com.google.android.material.button.MaterialButton
+                style="@style/BtnStyle"
+                android:onClick="goOpenCVK"
+                android:text="OpenCVK"
+                tools:ignore="HardcodedText,UsingOnClickInXml" />
+
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 </layout>
