--- a/app/src/main/res/layout/activity_opencvk_shape.xml
+++ b/app/src/main/res/layout/activity_opencvk_shape.xml
@@ -8,15 +8,15 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".scank.ScanKQRActivity2">
+        tools:context=".abilityk.opencvk.OpenCVKShapeActivity">
 
         <com.mozhimen.abilityk.cameraxk.CameraXKPreviewView
-            android:id="@+id/scank_contrast_preview"
+            android:id="@+id/opencvk_shape_preview"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
         <com.mozhimen.uicorek.viewk.ViewKQRScan
-            android:id="@+id/scank_contrast_qrscan"
+            android:id="@+id/opencvk_shape_qrscan"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_gravity="center"
@@ -28,11 +28,13 @@
             app:viewKQRScan_lineWidth="2dp" />
 
         <TextView
-            android:id="@+id/scank_contrast_res"
+            android:id="@+id/opencvk_shape_res"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="20sp"
             android:layout_gravity="center_horizontal|bottom"
-            android:layout_marginBottom="120dp" />
+            android:layout_marginBottom="120dp"
+            tools:text="0"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -40,24 +42,11 @@
             android:orientation="horizontal">
 
             <ImageView
-                android:id="@+id/scank_contrast_img"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:src="@color/blue_light" />
-
-            <ImageView
-                android:id="@+id/scank_contrast_img1"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:src="@color/blue_light" />
-
-            <ImageView
-                android:id="@+id/scank_contrast_img2"
+                android:id="@+id/opencvk_shape_img"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
                 android:src="@color/blue_light" />
 
         </LinearLayout>
-
     </FrameLayout>
 </layout>
