--- a/abilityk/src/main/res/layout/scank_qr2_activity.xml
+++ b/abilityk/src/main/res/layout/scank_qr2_activity.xml
@@ -8,7 +8,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".scank.ScanKQRActivity2">
+        tools:context=".scank.ScanKQR2Activity">
 
         <com.mozhimen.abilityk.cameraxk.CameraXKPreviewView
             android:id="@+id/scank_qr2_preview"
