--- a/app/src/main/res/layout/activity_scank_hsv.xml
+++ b/app/src/main/res/layout/activity_scank_hsv.xml
@@ -8,15 +8,15 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".abilityk.opencvk.OpenCVKShapeActivity">
+        tools:context=".abilityk.scank.ScanKHSVActivity">
 
         <com.mozhimen.abilityk.cameraxk.CameraXKPreviewView
-            android:id="@+id/opencvk_shape_preview"
+            android:id="@+id/scank_hsv_preview"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
         <com.mozhimen.uicorek.viewk.ViewKQRScan
-            android:id="@+id/opencvk_shape_qrscan"
+            android:id="@+id/scank_hsv_qrscan"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_gravity="center"
@@ -27,26 +27,36 @@
             app:viewKQRScan_lineDrawable="@drawable/scank_qrscan_line"
             app:viewKQRScan_lineWidth="2dp" />
 
-        <LinearLayout
+        <TextView
+            android:id="@+id/scank_hsv_res"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal|bottom"
-            android:layout_marginBottom="120dp"
-            android:orientation="vertical">
+            android:layout_marginBottom="120dp" />
 
-            <TextView
-                android:id="@+id/opencvk_shape_res"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                tools:text="0" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/opencvk_shape_res1"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="20sp"
-                tools:text="0" />
+            <ImageView
+                android:id="@+id/scank_hsv_img"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@color/blue_light" />
+
+            <ImageView
+                android:id="@+id/scank_hsv_img1"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@color/blue_light" />
+
+            <ImageView
+                android:id="@+id/scank_hsv_img2"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@color/blue_light" />
+
         </LinearLayout>
     </FrameLayout>
 </layout>
