--- a/app/src/main/res/layout/activity_opencvk_match.xml
+++ b/app/src/main/res/layout/activity_opencvk_match.xml
@@ -5,14 +5,58 @@
 
     <data />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".abilityk.opencvk.OpenCVKMatchActivity">
 
-        <ImageView
-            android:id="@+id/opencvk_match_iv"
+        <com.mozhimen.abilityk.cameraxk.CameraXKPreviewView
+            android:id="@+id/opencvk_match_preview"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
-    </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <com.mozhimen.uicorek.viewk.ViewKQRScan
+            android:id="@+id/opencvk_match_qrscan"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_gravity="center"
+            app:viewKQRScan_animTime="2000"
+            app:viewKQRScan_borderColor="@android:color/white"
+            app:viewKQRScan_borderLineWidth="2dp"
+            app:viewKQRScan_isScanLineReverse="false"
+            app:viewKQRScan_lineDrawable="@drawable/scank_qrscan_line"
+            app:viewKQRScan_lineWidth="2dp" />
+
+        <TextView
+            android:id="@+id/opencvk_match_res"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|bottom"
+            android:layout_marginBottom="120dp" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/opencvk_match_img"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@color/blue_light" />
+
+            <ImageView
+                android:id="@+id/opencvk_match_img1"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@color/blue_light" />
+
+            <ImageView
+                android:id="@+id/opencvk_match_img2"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:src="@color/blue_light" />
+
+        </LinearLayout>
+    </FrameLayout>
 </layout>
