--- a/app/src/main/res/layout/activity_sliderk.xml
+++ b/app/src/main/res/layout/activity_sliderk.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data />
 
@@ -9,7 +10,7 @@
         android:layout_height="match_parent"
         tools:context=".uicorek.sliderk.SliderKActivity">
 
-        <com.mozhimen.uicorek.sliderk.SliderKLayout
+        <com.mozhimen.uicorek.sliderk.SliderKSubLayout
             android:id="@+id/sliderk_slider"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
