--- a/app/src/main/res/layout/activity_uicorek.xml
+++ b/app/src/main/res/layout/activity_uicorek.xml
@@ -76,7 +76,13 @@
             <com.google.android.material.button.MaterialButton
                 style="@style/BtnStyle"
                 android:onClick="gotoLoadK"
-                android:text="Loadk"
+                android:text="LoadK"
+                tools:ignore="HardcodedText,UsingOnClickInXml" />
+
+            <com.google.android.material.button.MaterialButton
+                style="@style/BtnStyle"
+                android:onClick="gotoSliderK"
+                android:text="SliderK"
                 tools:ignore="HardcodedText,UsingOnClickInXml" />
 
             <com.google.android.material.button.MaterialButton
