--- a/uicorek/src/main/res/layout/sliderk_content_item.xml
+++ b/uicorek/src/main/res/layout/sliderk_content_item.xml
@@ -12,19 +12,19 @@
         android:layout_height="0dp"
         android:layout_margin="8dp"
         android:layout_weight="1"
-        app:cardCornerRadius="12dp">
+        app:cardCornerRadius="6dp">
 
         <ImageView
-            android:id="@+id/slider_content_img"
+            android:id="@+id/sliderk_content_item_img"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@android:color/white"
-            android:scaleType="fitCenter"
+            android:scaleType="centerCrop"
             android:src="@mipmap/layoutk_empty" />
     </androidx.cardview.widget.CardView>
 
     <TextView
-        android:id="@+id/slider_content_txt"
+        android:id="@+id/sliderk_content_item_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
