--- a/uicorek/src/main/res/layout/sliderk_content_item.xml
+++ b/uicorek/src/main/res/layout/sliderk_content_item.xml
@@ -10,7 +10,8 @@
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_margin="8dp"
+        android:layout_marginHorizontal="3dp"
+        android:layout_marginVertical="4dp"
         android:layout_weight="1"
         app:cardCornerRadius="6dp">
 
@@ -27,7 +28,10 @@
         android:id="@+id/sliderk_content_item_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="12dp"
+        android:layout_marginHorizontal="3dp"
+        android:layout_marginBottom="4dp"
+        android:ellipsize="end"
+        android:maxLines="1"
         android:text="某"
         android:textColor="@color/blue_normal"
         android:textSize="16sp"
