--- a/app/src/main/res/layout/activity_cameraxk.xml
+++ b/app/src/main/res/layout/activity_cameraxk.xml
@@ -4,7 +4,7 @@
 
     <data />
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
@@ -12,22 +12,33 @@
 
         <com.mozhimen.abilityk.cameraxk.CameraXKPreviewView
             android:id="@+id/camerak_preview_view"
-            android:layout_width="300dp"
-            android:layout_height="300dp"
-            android:layout_gravity="center" />
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
-        <ImageView
-            android:id="@+id/camerak_img"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_marginVertical="20dp"
-            android:scaleType="centerInside" />
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/camerak_img"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:scaleType="centerInside" />
+
+            <ImageView
+                android:id="@+id/camerak_img1"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:scaleType="centerInside" />
+        </LinearLayout>
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/camerak_btn"
             style="@style/BtnStyle"
-            android:layout_gravity="center"
+            android:layout_gravity="bottom"
+            android:layout_marginBottom="20dp"
             android:text="take"
             tools:ignore="HardcodedText" />
-    </LinearLayout>
+    </FrameLayout>
 </layout>
