--- a/app/src/main/res/layout/activity_hotfixk.xml
+++ b/app/src/main/res/layout/activity_hotfixk.xml
@@ -5,16 +5,23 @@
 
     <data />
 
-    <FrameLayout
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical"
         tools:context=".abilityk.hotfixk.HotFixKActivity">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:text="HotFix"
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/hotfixk_btn_toast"
+            style="@style/BtnStyle"
+            android:text="弹出消息"
             tools:ignore="HardcodedText" />
-    </FrameLayout>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/hotfixk_btn_hotfix"
+            style="@style/BtnStyle"
+            android:text="热修复"
+            tools:ignore="HardcodedText" />
+    </LinearLayout>
 </layout>
