--- a/app/src/main/res/layout/activity_textk.xml
+++ b/app/src/main/res/layout/activity_textk.xml
@@ -9,10 +9,9 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <com.mozhimen.uicorek.textk.TextKMarquee
-            android:layout_width="40dp"
-            android:layout_height="36dp"
-            android:text="这是一个跑马灯...我来测试它的效果怎么样"
-            tools:ignore="HardcodedText" />
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="36dp" />
+
     </LinearLayout>
 </layout>
