--- a/uicorek/src/main/res/anim/anim_top_out.xml
+++ b/uicorek/src/main/res/anim/anim_top_out.xml
@@ -2,8 +2,7 @@
 <set xmlns:android="http://schemas.android.com/apk/res/android"
     android:duration="200"
     android:fillAfter="true">
-
-    <alpha
-        android:fromAlpha="1.0"
-        android:toAlpha="0.0" />
+    <translate
+        android:fromYDelta="0"
+        android:toYDelta="-100%" />
 </set>
